# CudaImageProcessor

./: CMakeLists.txt  README.md
include/: cudaOperations.h
src/: cudaOperations.cu  main.cpp
